# atlas

./: CMakeLists.txt  README.md  main.cpp
data/: egm96_20x20.csv
python/: excel_reader.py  plotPerturbations.py
src/astro/: CMakeLists.txt
src/astro/SpaceVehicle/: CMakeLists.txt  SpaceVehicle.cpp  SpaceVehicle.h
src/astro/basic_astrodynamics/: CMakeLists.txt  Kepler.cpp  Kepler.h  kepler.cpp  kepler.h  stateConversions.cpp  stateConversions.h
src/astro/coordinate_frames/: CMakeLists.txt  CoordinateFrames.cpp  CoordinateFrames.h  coordinateFrames.cpp  coordinateFrames.h
src/astro/force_models/: CMakeLists.txt  ExponentialDragLookupTable.h  ForceModel.cpp  ForceModel.h
src/astro/geodetic_model/: CMakeLists.txt  GeodeticModel.cpp  GeodeticModel.h  geodeticModel.cpp  geodeticModel.h
src/astro/perturbation_methods/: CMakeLists.txt  PerturbationMethods.cpp  PerturbationMethods.h
src/astro/propagators/: CMakeLists.txt  OrbitPropagator.cpp  OrbitPropagator.h
src/astro/time_systems/: CMakeLists.txt  TimeConversions.cpp  TimeConversions.h  timeConversions.cpp  timeConversions.h
src/input_ouput/: CMakeLists.txt
src/input_ouput/earth_time_and_pole_data/: CMakeLists.txt  PrecessionNutation_XData.h
src/input_ouput/planetary_ephemerides/: CMakeLists.txt  meeusEphemeris.h
src/input_output/earth_time_and_pole_data/: CMakeLists.txt  ExtractTimeAndPoleData.cpp  ExtractTimeAndPoleData.h  FundamentalArguments.h  PrecessionNutationModel.h  PrecessionNutation_XData.h  PrecessionNutation_YData.h  PrecessionNutation_sData.h
src/input_output/planetary_ephemerides/: CMakeLists.txt  meeusEphemeris.h
src/math/: CMakeLists.txt  UniversalConstants.h
src/math/integrators/: CMakeLists.txt  Dopri87.cpp  Dopri87.h  NumericalIntegrator.cpp  NumericalIntegrator.h
src/math/utilities/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h  NumericalDiff.cpp  NumericalDiff.h  RotationMatrices.cpp  RotationMatrices.h  mathFunctions.cpp  mathFunctions.h
tests/astro/: CMakeLists.txt
tests/astro/basic_astrodynamics/: CMakeLists.txt  unitTestAngleConversions.cpp  unitTestKepler.cpp  unitTestOrbitStateConversions.cpp
tests/astro/coordinate_frames/: CMakeLists.txt  unitTestCoordinateFrames.cpp
tests/astro/force_models/: CMakeLists.txt  unitTestForceModelStrength.cpp  unitTestNonSphericalGravity.cpp  unitTestNonsphericalForceModel.cpp  unitTestTwoBody.cpp
tests/astro/geodetic_model/: CMakeLists.txt  unitTestGeodeticModel.cpp
tests/astro/propagators/: CMakeLists.txt  unitTestPropagators.cpp
tests/astro/time_systems/: CMakeLists.txt
tests/math/: CMakeLists.txt
tests/math/integrators/: CMakeLists.txt  unitTestDopri87.cpp
tests/math/utilities/: CMakeLists.txt  unitTestNumericalDiff.cpp
